--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-accordion": "^1.2.10",
+		"@radix-ui/react-checkbox": "^1.3.1",
+		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-navigation-menu": "^1.2.12",
+		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-slot": "^1.2.2",
 		"@types/react-icons": "^3.0.0",
 		"@types/react-scroll": "^1.8.10",
 		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.509.0",
 		"next": "15.3.2",
 		"react": "^19.0.0",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
 		"react-icons": "^5.5.0",
 		"react-scroll": "^1.9.3",
+		"react-select": "^5.10.1",
 		"tailwind-merge": "^3.2.0",
 		"zod": "^3.24.4"
 	},
