--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@emotion/cache": "^11.14.0",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
 		"@hookform/resolvers": "^5.0.1",
+		"@mui/material": "^7.1.0",
+		"@mui/material-nextjs": "^7.1.0",
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-avatar": "^1.1.9",
 		"@radix-ui/react-checkbox": "^1.3.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-navigation-menu": "^1.2.12",
 		"@radix-ui/react-popover": "^1.1.13",
 		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-slot": "^1.2.2",
+		"@tanstack/react-table": "^8.21.3",
 		"@types/react-icons": "^3.0.0",
 		"@types/react-scroll": "^1.8.10",
 		"axios": "^1.9.0",
@@ -36,7 +43,8 @@
 		"react-scroll": "^1.9.3",
 		"react-select": "^5.10.1",
 		"tailwind-merge": "^3.2.0",
-		"zod": "^3.24.4"
+		"zod": "^3.24.4",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
