--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-avatar": "^1.1.9",
 		"@radix-ui/react-checkbox": "^1.3.1",
+		"@radix-ui/react-dialog": "^1.1.13",
 		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-navigation-menu": "^1.2.12",
@@ -35,6 +36,7 @@
 		"framer-motion": "^12.11.0",
 		"lucide-react": "^0.509.0",
 		"next": "15.3.2",
+		"next-safe-action": "^7.10.8",
 		"react": "^19.0.0",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0",
@@ -56,6 +58,7 @@
 		"eslint-config-next": "15.3.2",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.0.0",
+		"react-toastify": "^11.0.5",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.2.9",
 		"typescript": "^5"
