--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"framer-motion": "^12.11.0",
+		"libphonenumber-js": "^1.12.8",
 		"lucide-react": "^0.509.0",
 		"next": "15.3.2",
 		"next-safe-action": "^7.10.8",
