--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@hookform/resolvers": "^5.0.1",
+		"@lottiefiles/dotlottie-react": "^0.13.5",
 		"@mui/material": "^7.1.0",
 		"@mui/material-nextjs": "^7.1.0",
 		"@radix-ui/react-accordion": "^1.2.10",
@@ -41,6 +42,7 @@
 		"react": "^19.0.0",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0",
+		"react-error-boundary": "^6.0.0",
 		"react-hook-form": "^7.56.3",
 		"react-icons": "^5.5.0",
 		"react-scroll": "^1.9.3",
