installed required deps

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/cache": "^11.14.0",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@hello-pangea/dnd": "^18.0.1",
 		"@hookform/resolvers": "^5.0.1",
 		"@lottiefiles/dotlottie-react": "^0.13.5",
 		"@mui/material": "^7.1.0",
@@ -29,6 +30,7 @@
 		"@radix-ui/react-slot": "^1.2.2",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/react-icons": "^3.0.0",
+		"@types/react-lazy-load-image-component": "^1.6.4",
 		"@types/react-scroll": "^1.8.10",
 		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
@@ -37,6 +39,7 @@
 		"framer-motion": "^12.11.0",
 		"libphonenumber-js": "^1.12.8",
 		"lucide-react": "^0.509.0",
+		"nanoid": "^5.1.5",
 		"next": "15.3.2",
 		"next-safe-action": "^7.10.8",
 		"react": "^19.0.0",
